--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/dictionaries
+.idea/**
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -16,6 +14,7 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+*.iml
 
 # Gradle:
 .idea/**/gradle.xml
